# Tetris

./: CMakeLists.txt  README.txt  board.cpp  board.h  figure.cpp  figure.h  main.cpp  menu.cpp  menu.h  point.cpp  point.h  score.cpp  score.h
