cmake_minimum_required(VERSION 3.24)
project(Tetris_PO)

set(CMAKE_CXX_STANDARD 23)
add_executable(Tetris_PO main.cpp board.h board.cpp menu.cpp menu.h score.h score.cpp point.h point.cpp figure.h figure.cpp)
include_directories(/usr/local/include)
find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(Tetris_PO sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
file(COPY source DESTINATION ${CMAKE_BINARY_DIR})
